--- a/GetSeoulRealEstatePrice/app/src/main/res/layout/activity_main.xml
+++ b/GetSeoulRealEstatePrice/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,76 +12,125 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.hongseokandrewjang.android.getseoulrealestateprice.MainActivity">
 
-    <TextView
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:text="2007 ~ 2016년의 연도를 정해주세요"
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view_year"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/announceChoiceYear"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_height="wrap_content">
 
-    <Spinner
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinnerYearChoice"
-        android:layout_below="@+id/announceChoiceYear"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:text="시 군 구를 선택해 주세요"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/announceChoiceSigungu"
-        android:layout_below="@+id/spinnerYearChoice"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+            <TextView
+                android:layout_margin="5dp"
+                android:text="2007 ~ 2016년의 연도를 정해주세요"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/announceChoiceYear"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
-    <Spinner
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+            <Spinner
+                android:layout_margin="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/spinnerYearChoice"
+                android:layout_below="@+id/announceChoiceYear"
+                android:layout_alignParentLeft="true"/>
+
+        </RelativeLayout>
+
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/card_view_year"
+        android:id="@+id/card_view_sigungu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinnerSigunguChoice"
-        android:layout_below="@+id/announceChoiceSigungu"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_margin="5dp"
+                android:text="시 군 구를 선택해 주세요"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/announceChoiceSigungu"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"/>
+
+            <Spinner
+                android:layout_margin="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/spinnerSigunguChoice"
+                android:layout_below="@+id/announceChoiceSigungu"
+                android:layout_alignParentLeft="true" />
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        app:cardElevation="10dp"
+        app:cardCornerRadius="5dp"
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/btnCallData"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="지역"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/showRegion"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"/>
+
+            <TextView
+                android:text="가격"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/showRegion"
+                android:layout_alignParentLeft="true"
+                android:id="@+id/showAverage" />
+
+        </RelativeLayout>
+
+
+    </android.support.v7.widget.CardView>
 
     <Button
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
         android:text="CALL DATA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnCallData"
-        android:layout_below="@+id/spinnerSigunguChoice"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/card_view_sigungu"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 
-    <TextView
-        android:text="강북구의 평균 지가는 : "
-        android:layout_width="match_parent"
+    <Button
+        android:text="SEE MAP"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/showRegion"
-        android:layout_below="@+id/btnCallData"
+        android:id="@+id/btnSeeMap"
+        android:layout_below="@+id/card_view_sigungu"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="45dp" />
+        android:layout_alignParentStart="true"/>
 
-    <TextView
-        android:text="XX원 입니다."
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/showRegion"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="50dp"
-        android:id="@+id/showAverage" />
 
 </RelativeLayout>
