--- a/BanThing/app/src/main/res/layout/activity_store_detail.xml
+++ b/BanThing/app/src/main/res/layout/activity_store_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_store_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,13 +11,21 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.hongseokandrewjang.android.banthing.StoreDetail">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:srcCompat="@mipmap/chicken6"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/store_deatil_Logo"/>
+
     <GridView
         android:id="@+id/store_detail_grid_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:outlineProvider="bounds"
-        android:numColumns="2" />
+        android:numColumns="2"
+        android:layout_below="@+id/store_deatil_Logo"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 </RelativeLayout>
