--- a/BanThing/app/src/main/res/layout/main_list_item.xml
+++ b/BanThing/app/src/main/res/layout/main_list_item.xml
@@ -6,12 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/image_on_main_list"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:srcCompat="@drawable/chicken1" />
-
     <LinearLayout
         android:padding="10dp"
         android:layout_width="260dp"
@@ -44,4 +38,13 @@
             android:text="배달비 : 1500원"
             android:layout_weight="0.94" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/image_on_main_list"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:srcCompat="@drawable/chicken1"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 </RelativeLayout>
