--- a/BanThing/app/src/main/res/layout/activity_main.xml
+++ b/BanThing/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,14 @@
         android:text="MENUBARMENUBARMENUBARMENUBARMENUBAR"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
     <ListView
-        android:layout_below="@id/menubarposition"
         android:id="@+id/listView_On_Main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/menubarposition"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
     </ListView>
 
