--- a/BanThing/app/src/main/res/layout/activity_main.xml
+++ b/BanThing/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_login"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hongseokandrewjang.android.banthing.Login">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
 
-    <TextView
-        android:layout_alignParentTop="true"
-        android:gravity="center_horizontal"
-        android:id="@+id/menubarposition"
-        android:text="MENUBARMENUBARMENUBARMENUBARMENUBAR"
+    <FrameLayout
+        android:id="@+id/fragment_ground_in_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <ListView
-        android:id="@+id/listView_On_Main"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/menubarposition"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
-    </ListView>
+        android:layout_height="match_parent">
+    </FrameLayout>
 
 </RelativeLayout>
