--- a/BanThing/app/src/main/res/layout/main_list_item.xml
+++ b/BanThing/app/src/main/res/layout/main_list_item.xml
@@ -1,50 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/list_item_view"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    app:cardCornerRadius="5dp"
+    android:id="@+id/card_view"
+    android:layout_margin="3dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true">
 
-    <LinearLayout
+    <RelativeLayout
         android:padding="10dp"
-        android:layout_width="260dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/image_on_main_list"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:weightSum="1">
+        android:id="@+id/list_item_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/chickenStoreName"
+        <LinearLayout
+            android:padding="10dp"
             android:layout_width="match_parent"
-            android:layout_height="33dp"
-            android:text="네네치킨"
-            android:layout_weight="0.94" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/image_on_main_list"
+            android:layout_toLeftOf="@+id/image_to_next"
+            android:weightSum="1"
+            android:layout_centerVertical="true">
 
-        <TextView
-            android:id="@+id/chickenStoreMinPrice"
-            android:layout_width="match_parent"
-            android:layout_height="33dp"
-            android:text="가격 : 8500 ~"
-            android:layout_weight="0.94" />
+            <TextView
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
+                android:layout_weight="0.34"
+                android:id="@+id/storeName_in_main_list"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:text="네네치킨"
+                android:textColor="#000000"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:gravity="center_vertical"/>
 
-        <TextView
-            android:id="@+id/chickenStoreDeliveryFee"
-            android:layout_width="match_parent"
-            android:layout_height="33dp"
-            android:text="배달비 : 1500원"
-            android:layout_weight="0.94" />
-    </LinearLayout>
+            <TextView
+                android:layout_weight="0.33"
+                android:id="@+id/deliveryFee_in_main_list"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:text="배달비 : 1500원"
+                android:gravity="center_vertical"/>
 
-    <ImageView
-        android:id="@+id/image_on_main_list"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:srcCompat="@drawable/chicken1"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
-</RelativeLayout>
+            <TextView
+                android:layout_weight="0.33"
+                android:id="@+id/price_in_main_list"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:text="가격 : 8500 ~"
+                android:gravity="center_vertical"/>
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/image_on_main_list"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:srcCompat="@drawable/chicken1"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="?attr/actionModeCloseDrawable"
+            android:id="@+id/image_to_next"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"/>
+
+
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
+
