--- a/BanThing/app/src/main/res/values/colors.xml
+++ b/BanThing/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="Main">#F26622</color>
+    <color name="BrighterMain">#f2ce22</color>
+    <color name="DarkerMain">#f22246</color>
+    <color name="TextOnMainColor">#2246f2</color>
+
+
 </resources>
