--- a/BanThing/app/src/main/res/values/styles.xml
+++ b/BanThing/app/src/main/res/values/styles.xml
@@ -1,7 +1,21 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/Main</item>
+        <item name="colorPrimaryDark">@color/DarkerMain</item>
+        <item name="colorAccent">@color/BrighterMain</item>
+    </style>
+
+    <style name="BanThingTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/Main</item>
+        <item name="colorPrimaryDark">@color/DarkerMain</item>
+        <item name="colorAccent">@color/BrighterMain</item>
+    </style>
+
+    <style name="DarkActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
