--- a/BanThing/app/src/main/res/values/colors.xml
+++ b/BanThing/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="Main">#F26622</color>
-    <color name="BrighterMain">#f2ce22</color>
+    <color name="BrighterMain">#f6986a</color>
     <color name="DarkerMain">#f22246</color>
     <color name="TextOnMainColor">#2246f2</color>
 
