--- a/BanThing/app/src/main/res/layout/activity_loading.xml
+++ b/BanThing/app/src/main/res/layout/activity_loading.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hongseokandrewjang.android.banthing.Login">
+    tools:context="com.hongseokandrewjang.android.banthing.Loading">
 
     <ImageView
         android:layout_width="200dp"
