--- a/BanThing/app/src/main/res/layout/fragment_store_detail.xml
+++ b/BanThing/app/src/main/res/layout/fragment_store_detail.xml
@@ -1,26 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_store_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hongseokandrewjang.android.banthing.StoreDetail">
+    tools:context="com.hongseokandrewjang.android.banthing.Fragments.StoreDetailFragment">
+
+    <android.support.v7.widget.Toolbar
+        android:background="@color/Main"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        layout_height="match_parent"
+        layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:id="@+id/toolbar_in_store_detail">
+    </android.support.v7.widget.Toolbar>
+
+    <TextView
+        android:padding="3dp"
+        android:text="이름이름"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/menu_detail_name"
+        android:layout_below="@+id/menu_detail_image"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:background="@drawable/border" />
+
+    <RelativeLayout
+        android:background="@color/BrighterMain"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/menu_detail_name"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <TextView
+            android:text="MENU"
+            android:textColor="#FFFFFF"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/store_detail_show_menu"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:gravity="center_horizontal" />
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recyclerview_in_detail"
+            android:layout_below="@+id/store_detail_show_menu"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+    </RelativeLayout>
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
         app:srcCompat="@mipmap/chicken6"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/store_deatil_Logo"/>
+        android:id="@+id/menu_detail_image"
+        android:layout_height="160dp"
+        android:layout_below="@+id/toolbar_in_store_detail"
+        android:layout_centerHorizontal="true" />
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 
 </RelativeLayout>
