--- a/BanThing/app/src/main/res/layout/store_menu_item.xml
+++ b/BanThing/app/src/main/res/layout/store_menu_item.xml
@@ -1,44 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<android.support.v7.widget.CardView
+    android:id="@+id/store_detail_cardview"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="6dp"
+    android:layout_margin="6dp"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content">
 
-    <TextView
-        android:text="메뉴 이름"
-        android:layout_centerHorizontal="true"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/store_detail_menu_name"
-        android:layout_alignBottom="@+id/store_detail_menu_picture"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/store_detail_menu_picture"
-        android:layout_alignEnd="@+id/store_detail_menu_picture"
-        android:layout_alignWithParentIfMissing="false"
-        android:layout_centerInParent="false"
-        android:layout_centerVertical="false"/>
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:text="메뉴 가격"
-        android:layout_centerHorizontal="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/store_detail_menu_name"
-        android:id="@+id/store_detail_menu_price"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/store_detail_menu_name"
-        android:layout_alignEnd="@+id/store_detail_menu_name"/>
+        <TextView
+            android:text="메뉴 가격"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/store_detail_menu_price"
+            android:layout_below="@+id/store_detail_menu_name"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:gravity="center_horizontal" />
 
-    <ImageView
-        android:layout_width="160dp"
-        app:srcCompat="@drawable/chicken3"
-        android:id="@+id/store_detail_menu_picture"
-        android:layout_height="160dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        <ImageView
+            android:layout_width="160dp"
+            app:srcCompat="@drawable/chicken3"
+            android:id="@+id/store_detail_menu_picture"
+            android:layout_height="160dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="메뉴 이름"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/store_detail_menu_name"
+            android:layout_alignWithParentIfMissing="false"
+            android:layout_centerInParent="false"
+            android:gravity="center_horizontal"
+            android:layout_below="@+id/store_detail_menu_picture"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
 
-</RelativeLayout>
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
