--- a/BanThing/app/src/main/res/values/styles.xml
+++ b/BanThing/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">@color/BrighterMain</item>
     </style>
 
-    <style name="BanThingTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="BanThingTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/Main</item>
         <item name="colorPrimaryDark">@color/DarkerMain</item>
