--- a/JikBang/app/src/main/res/layout/fragment_map.xml
+++ b/JikBang/app/src/main/res/layout/fragment_map.xml
@@ -1,13 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/map"
+    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-    <com.google.android.gms.maps.MapFragment
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/map" />
-</RelativeLayout>
+    android:layout_height="match_parent"
+    tools:context="chat.android.fastcampus.co.kr.jikbang.MapFragment" />
