--- a/JikBang/app/src/main/res/layout/fragment_post.xml
+++ b/JikBang/app/src/main/res/layout/fragment_post.xml
@@ -1,4 +1,4 @@
-<android.support.design.widget.CoordinatorLayout
+<android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="true"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -27,21 +27,21 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
-        <TextView
+        <EditText
             android:text="방제목"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:id="@+id/textView5"
+            android:id="@+id/et_RoomTitle"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
         <RadioGroup
             android:id="@+id/buttons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textView5"
+            android:layout_below="@+id/et_RoomTitle"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:orientation="horizontal">
@@ -113,35 +113,73 @@
             android:layout_alignParentEnd="true"
             android:id="@+id/extra_conditions">
 
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/et_Room_Number"
-                android:layout_weight="1"
-                android:hint="보증금" />
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/et_Room_Size"
-                android:layout_weight="1"
-                android:hint="월세" />
         </LinearLayout>
 
+        <Button
+            android:text="Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button2"
+            android:layout_below="@+id/img_room"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_toLeftOf="@+id/et_Room_Size"
+            android:layout_toStartOf="@+id/et_Room_Size" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/et_Room_Number"
+            android:layout_weight="1"
+            android:hint="보증금"
+            android:layout_below="@+id/button2"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/et_Room_Size"
+            android:layout_weight="1"
+            android:hint="월세"
+            android:layout_alignBaseline="@+id/et_Room_Number"
+            android:layout_alignBottom="@+id/et_Room_Number"
+            android:layout_toRightOf="@+id/et_Room_Number"
+            android:layout_toEndOf="@+id/et_Room_Number" />
+
         <fragment
-            android:layout_below="@id/extra_conditions"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:map="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            tools:context="chat.android.fastcampus.co.kr.jikbang.MapsActivity" />
+            tools:context="chat.android.fastcampus.co.kr.jikbang.MapsActivity"
+            android:layout_below="@+id/et_Room_Number"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <Button
+            android:text="Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/img_room"
+            android:layout_toRightOf="@+id/et_Room_Size"
+            android:layout_toEndOf="@+id/et_Room_Size"
+            android:layout_marginLeft="152dp"
+            android:layout_marginStart="152dp"
+            android:id="@+id/button3" />
+
+        <Button
+            android:text="Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/button4"
+            android:layout_below="@+id/extra_conditions"
+            android:layout_toEndOf="@+id/et_Room_Number"
+            android:layout_toRightOf="@+id/et_Room_Number" />
     </RelativeLayout>
 
 </ScrollView>
