Add internet available flag so that users can se the applicaiton although they are not conneted to internet -> Used Realm for offline database system

--- a/BanThing/app/src/main/res/layout/activity_purchase.xml
+++ b/BanThing/app/src/main/res/layout/activity_purchase.xml
@@ -16,4 +16,13 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/toolbar_in_purchase" />
+
+    <TextView
+        android:text="Purchase Page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/test_on_purchase"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 </RelativeLayout>
