--- a/BanThing/app/src/main/res/layout/activity_signin.xml
+++ b/BanThing/app/src/main/res/layout/activity_signin.xml
@@ -17,91 +17,76 @@
         android:layout_alignParentStart="true"
         android:id="@+id/toolbar_in_signin" />
 
-    <TextView
-        android:text="FB SIGN IN"
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/SignIn_btnFBSignIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView3"
-        android:layout_marginBottom="18dp"
-        android:layout_above="@+id/textView2"
-        android:layout_alignLeft="@+id/editText2"
-        android:layout_alignStart="@+id/editText2" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="37dp"
+        android:layout_below="@+id/SignIn_etPassword"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="SIGN IN"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/SignIn_btnSignIn"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/editText"
+        android:id="@+id/SignIn_etId"
         android:hint="ID"
         android:background="@drawable/border"
-        android:layout_above="@+id/button2"
-        android:layout_toLeftOf="@+id/button2"
-        android:layout_toStartOf="@+id/button2" />
-
-    <Button
-        android:text="SIGN IN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button2"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:text="SIGNIN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView5"
-        android:layout_marginTop="19dp"
-        android:layout_below="@+id/textView3"
-        android:layout_toRightOf="@+id/textView4"
-        android:layout_toEndOf="@+id/textView4"
-        android:layout_marginLeft="28dp"
-        android:layout_marginStart="28dp" />
-
-    <TextView
-        android:text="NAVER SIGNIN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView4"
-        android:layout_alignBaseline="@+id/textView3"
-        android:layout_alignBottom="@+id/textView3"
-        android:layout_toRightOf="@+id/textView3"
-        android:layout_toEndOf="@+id/textView3"
-        android:layout_marginLeft="65dp"
-        android:layout_marginStart="65dp" />
-
-    <TextView
-        android:text="GOOGLE SIGNIN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="118dp"
-        android:id="@+id/textView2"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/textView3"
-        android:layout_alignEnd="@+id/textView3" />
+        android:layout_alignTop="@+id/SignIn_btnSignIn"
+        android:layout_toLeftOf="@+id/SignIn_btnSignIn"
+        android:layout_toStartOf="@+id/SignIn_btnSignIn" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText2"
+        android:id="@+id/SignIn_etPassword"
         android:hint="Password"
         android:background="@drawable/border"
-        android:layout_alignBottom="@+id/button2"
-        android:layout_toLeftOf="@+id/button2"
-        android:layout_toStartOf="@+id/button2" />
+        android:layout_alignBottom="@+id/SignIn_btnSignIn"
+        android:layout_toLeftOf="@+id/SignIn_btnSignIn"
+        android:layout_toStartOf="@+id/SignIn_btnSignIn" />
 
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/login_button"
+    <Button
+        android:text="비회원으로 주문하기"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="38dp"
-        android:layout_above="@+id/editText"
+        android:id="@+id/SignIn_btnNoSignIn"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="27dp" />
+
+    <Button
+        android:text="Sign Up"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/SignIn_btnFBSignIn"
+        android:layout_alignRight="@+id/SignIn_btnFBSignIn"
+        android:layout_alignEnd="@+id/SignIn_btnFBSignIn"
+        android:layout_alignLeft="@+id/SignIn_btnFBSignIn"
+        android:layout_alignStart="@+id/SignIn_btnFBSignIn"
+        android:id="@+id/SignIn_btnSignUp" />
+
+    <TextView
+        android:text="로그인을 하시면 더욱 편하게\n 반띵을 사용하실 수 있습니다"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="78dp"
+        android:id="@+id/textView2"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:layout_below="@+id/toolbar_in_signin"
         android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
